[tool.poetry]
name = "dbt-work"
version = "0.1.0"
description = ""
authors = ["saraono67 <sara.ono.hamu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
elementary-data = ">=0.19.3,<0.20.0"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.4.2"
dbt-osmosis = "^1.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"